crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-craftinginterpreters__test__field__get_and_set_method.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/field/get_and_set_method.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class Foo (global @1) ∅
      (method method [(local this @0) (local a @1)] []
         (block
            (print "method")
            (print (local a @1))))
      (method other [(local this @0) (local a @1)] []
         (block
            (print "other")
            (print (local a @1)))))
   (var foo (global @2) (call +2 (global Foo @1)))
   (var method (global @3) (attr (global foo @2) method))
   (expr (= (setattr (global foo @2) method) (attr (global foo @2) other)))
   (expr (call +4 (attr (global foo @2) method) 1.0))
   (expr (call +4 (global method @3) 2.0)))

----- stderr -----
