crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-craftinginterpreters__test__field__many.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/field/many.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class Foo (global @1) ∅)
   (var foo (global @2) (call +2 (global Foo @1)))
   (fun setFields (global @3) [] []
      (block
         (expr (= (setattr (global foo @2) bilberry) "bilberry"))
         (expr (= (setattr (global foo @2) lime) "lime"))
         (expr (= (setattr (global foo @2) elderberry) "elderberry"))
         (expr (= (setattr (global foo @2) raspberry) "raspberry"))
         (expr (= (setattr (global foo @2) gooseberry) "gooseberry"))
         (expr (= (setattr (global foo @2) longan) "longan"))
         (expr (= (setattr (global foo @2) mandarine) "mandarine"))
         (expr (= (setattr (global foo @2) kiwifruit) "kiwifruit"))
         (expr (= (setattr (global foo @2) orange) "orange"))
         (expr (= (setattr (global foo @2) pomegranate) "pomegranate"))
         (expr (= (setattr (global foo @2) tomato) "tomato"))
         (expr (= (setattr (global foo @2) banana) "banana"))
         (expr (= (setattr (global foo @2) juniper) "juniper"))
         (expr (= (setattr (global foo @2) damson) "damson"))
         (expr (= (setattr (global foo @2) blackcurrant) "blackcurrant"))
         (expr (= (setattr (global foo @2) peach) "peach"))
         (expr (= (setattr (global foo @2) grape) "grape"))
         (expr (= (setattr (global foo @2) mango) "mango"))
         (expr (= (setattr (global foo @2) redcurrant) "redcurrant"))
         (expr (= (setattr (global foo @2) watermelon) "watermelon"))
         (expr (= (setattr (global foo @2) plumcot) "plumcot"))
         (expr (= (setattr (global foo @2) papaya) "papaya"))
         (expr (= (setattr (global foo @2) cloudberry) "cloudberry"))
         (expr (= (setattr (global foo @2) rambutan) "rambutan"))
         (expr (= (setattr (global foo @2) salak) "salak"))
         (expr (= (setattr (global foo @2) physalis) "physalis"))
         (expr (= (setattr (global foo @2) huckleberry) "huckleberry"))
         (expr (= (setattr (global foo @2) coconut) "coconut"))
         (expr (= (setattr (global foo @2) date) "date"))
         (expr (= (setattr (global foo @2) tamarind) "tamarind"))
         (expr (= (setattr (global foo @2) lychee) "lychee"))
         (expr (= (setattr (global foo @2) raisin) "raisin"))
         (expr (= (setattr (global foo @2) apple) "apple"))
         (expr (= (setattr (global foo @2) avocado) "avocado"))
         (expr (= (setattr (global foo @2) nectarine) "nectarine"))
         (expr (= (setattr (global foo @2) pomelo) "pomelo"))
         (expr (= (setattr (global foo @2) melon) "melon"))
         (expr (= (setattr (global foo @2) currant) "currant"))
         (expr (= (setattr (global foo @2) plum) "plum"))
         (expr (= (setattr (global foo @2) persimmon) "persimmon"))
         (expr (= (setattr (global foo @2) olive) "olive"))
         (expr (= (setattr (global foo @2) cranberry) "cranberry"))
         (expr (= (setattr (global foo @2) boysenberry) "boysenberry"))
         (expr (= (setattr (global foo @2) blackberry) "blackberry"))
         (expr (= (setattr (global foo @2) passionfruit) "passionfruit"))
         (expr (= (setattr (global foo @2) mulberry) "mulberry"))
         (expr (= (setattr (global foo @2) marionberry) "marionberry"))
         (expr (= (setattr (global foo @2) plantain) "plantain"))
         (expr (= (setattr (global foo @2) lemon) "lemon"))
         (expr (= (setattr (global foo @2) yuzu) "yuzu"))
         (expr (= (setattr (global foo @2) loquat) "loquat"))
         (expr (= (setattr (global foo @2) kumquat) "kumquat"))
         (expr (= (setattr (global foo @2) salmonberry) "salmonberry"))
         (expr (= (setattr (global foo @2) tangerine) "tangerine"))
         (expr (= (setattr (global foo @2) durian) "durian"))
         (expr (= (setattr (global foo @2) pear) "pear"))
         (expr (= (setattr (global foo @2) cantaloupe) "cantaloupe"))
         (expr (= (setattr (global foo @2) quince) "quince"))
         (expr (= (setattr (global foo @2) guava) "guava"))
         (expr (= (setattr (global foo @2) strawberry) "strawberry"))
         (expr (= (setattr (global foo @2) nance) "nance"))
         (expr (= (setattr (global foo @2) apricot) "apricot"))
         (expr (= (setattr (global foo @2) jambul) "jambul"))
         (expr (= (setattr (global foo @2) grapefruit) "grapefruit"))
         (expr (= (setattr (global foo @2) clementine) "clementine"))
         (expr (= (setattr (global foo @2) jujube) "jujube"))
         (expr (= (setattr (global foo @2) cherry) "cherry"))
         (expr (= (setattr (global foo @2) feijoa) "feijoa"))
         (expr (= (setattr (global foo @2) jackfruit) "jackfruit"))
         (expr (= (setattr (global foo @2) fig) "fig"))
         (expr (= (setattr (global foo @2) cherimoya) "cherimoya"))
         (expr (= (setattr (global foo @2) pineapple) "pineapple"))
         (expr (= (setattr (global foo @2) blueberry) "blueberry"))
         (expr (= (setattr (global foo @2) jabuticaba) "jabuticaba"))
         (expr (= (setattr (global foo @2) miracle) "miracle"))
         (expr (= (setattr (global foo @2) dragonfruit) "dragonfruit"))
         (expr (= (setattr (global foo @2) satsuma) "satsuma"))
         (expr (= (setattr (global foo @2) tamarillo) "tamarillo"))
         (expr (= (setattr (global foo @2) honeydew) "honeydew"))))
   (expr (call +4 (global setFields @3)))
   (fun printFields (global @4) [] []
      (block
         (print (attr (global foo @2) apple))
         (print (attr (global foo @2) apricot))
         (print (attr (global foo @2) avocado))
         (print (attr (global foo @2) banana))
         (print (attr (global foo @2) bilberry))
         (print (attr (global foo @2) blackberry))
         (print (attr (global foo @2) blackcurrant))
         (print (attr (global foo @2) blueberry))
         (print (attr (global foo @2) boysenberry))
         (print (attr (global foo @2) cantaloupe))
         (print (attr (global foo @2) cherimoya))
         (print (attr (global foo @2) cherry))
         (print (attr (global foo @2) clementine))
         (print (attr (global foo @2) cloudberry))
         (print (attr (global foo @2) coconut))
         (print (attr (global foo @2) cranberry))
         (print (attr (global foo @2) currant))
         (print (attr (global foo @2) damson))
         (print (attr (global foo @2) date))
         (print (attr (global foo @2) dragonfruit))
         (print (attr (global foo @2) durian))
         (print (attr (global foo @2) elderberry))
         (print (attr (global foo @2) feijoa))
         (print (attr (global foo @2) fig))
         (print (attr (global foo @2) gooseberry))
         (print (attr (global foo @2) grape))
         (print (attr (global foo @2) grapefruit))
         (print (attr (global foo @2) guava))
         (print (attr (global foo @2) honeydew))
         (print (attr (global foo @2) huckleberry))
         (print (attr (global foo @2) jabuticaba))
         (print (attr (global foo @2) jackfruit))
         (print (attr (global foo @2) jambul))
         (print (attr (global foo @2) jujube))
         (print (attr (global foo @2) juniper))
         (print (attr (global foo @2) kiwifruit))
         (print (attr (global foo @2) kumquat))
         (print (attr (global foo @2) lemon))
         (print (attr (global foo @2) lime))
         (print (attr (global foo @2) longan))
         (print (attr (global foo @2) loquat))
         (print (attr (global foo @2) lychee))
         (print (attr (global foo @2) mandarine))
         (print (attr (global foo @2) mango))
         (print (attr (global foo @2) marionberry))
         (print (attr (global foo @2) melon))
         (print (attr (global foo @2) miracle))
         (print (attr (global foo @2) mulberry))
         (print (attr (global foo @2) nance))
         (print (attr (global foo @2) nectarine))
         (print (attr (global foo @2) olive))
         (print (attr (global foo @2) orange))
         (print (attr (global foo @2) papaya))
         (print (attr (global foo @2) passionfruit))
         (print (attr (global foo @2) peach))
         (print (attr (global foo @2) pear))
         (print (attr (global foo @2) persimmon))
         (print (attr (global foo @2) physalis))
         (print (attr (global foo @2) pineapple))
         (print (attr (global foo @2) plantain))
         (print (attr (global foo @2) plum))
         (print (attr (global foo @2) plumcot))
         (print (attr (global foo @2) pomegranate))
         (print (attr (global foo @2) pomelo))
         (print (attr (global foo @2) quince))
         (print (attr (global foo @2) raisin))
         (print (attr (global foo @2) rambutan))
         (print (attr (global foo @2) raspberry))
         (print (attr (global foo @2) redcurrant))
         (print (attr (global foo @2) salak))
         (print (attr (global foo @2) salmonberry))
         (print (attr (global foo @2) satsuma))
         (print (attr (global foo @2) strawberry))
         (print (attr (global foo @2) tamarillo))
         (print (attr (global foo @2) tamarind))
         (print (attr (global foo @2) tangerine))
         (print (attr (global foo @2) tomato))
         (print (attr (global foo @2) watermelon))
         (print (attr (global foo @2) yuzu))))
   (expr (call +5 (global printFields @4))))

----- stderr -----
