crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-craftinginterpreters__test__field__method.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/field/method.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class Foo (global @1)
      (method bar [(local this @0) (local arg @1)] []
         (block
            (print (local arg @1)))))
   (var bar (global @2) (attr (call +2 (global Foo @1)) bar))
   (print "got method")
   (expr (call +3 (global bar @2) "arg")))

----- stderr -----
