crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-craftinginterpreters__test__field__method_binds_this.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/field/method_binds_this.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class Foo (global @1) ∅
      (method sayName [(local this @0) (local a @1)] []
         (block
            (print (attr (local this @0) name))
            (print (local a @1)))))
   (var foo1 (global @2) (call +2 (global Foo @1)))
   (expr (= (setattr (global foo1 @2) name) "foo1"))
   (var foo2 (global @3) (call +3 (global Foo @1)))
   (expr (= (setattr (global foo2 @3) name) "foo2"))
   (expr (= (setattr (global foo2 @3) fn) (attr (global foo1 @2) sayName)))
   (expr (call +4 (attr (global foo2 @3) fn) 1.0)))

----- stderr -----
